[project]
name = "ax25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeremy Banker", email = "loredous@loredous.net" }
]
requires-python = ">=3.12"
dependencies = [
    "kiss",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ax25"]

[tool.uv.sources]
kiss = { workspace = true }
